inicio de los cambios

--- a/index.html
+++ b/index.html
@@ -11,5 +11,23 @@
         <h1 class="hero-title">Desarrolladores web, moviles y software</h1>
         <p class="hero-text">Creado soluciones una linea de codigo a la vez...</p>
     </div>
+    <div class="container">
+        <h2>Aplicaciones web, movile y de escritorio</h2>
+        <p>Somos una empresa de <b>desarrollo web</b>, <b>aplicaciones moviles</b> y de escritorio 100% guatemalteca. Nuestro equipo multidisciplinario ha ayudado a crear soluciones 
+        para distintas necesidades.
+        </p>
+    </div>
+    <div class="container">
+        <h2>Nuestros Proyectos</h2>
+        <div class="project">
+            <img src="https://play-lh.googleusercontent.com/VL1rpR_Xs5tQtCr8UlHvEa_tv9G7319csFOsyhwUS-CdnmAmmt4D2lOKRFAuUv6jnvQm=w240-h480-rw" alt="desarrollo web" srcset="">
+            <h3>RadioLibre</h3>
+            <p>Aplicacion de Streaming de Radio. Con mas de 100 radios licenciadas.</p>
+            <div class="butons">
+                <a href="https://play.google.com/store/apps/details?id=com.samuelcastillo.radiosFree" class="butonLink">Ver Proyecto</a>
+            </div>
+
+        </div>
+    </div>
 </body>
 </html>
