--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="desarrolo de software, guatemala, programadores, programacion, aplicaciones, apps">
+    <meta name="description" content="Estudio de desarrollo de software en Guatemala. UX, UI, desarrollo de aplicaciones, programas, sitios web">
     <link rel="stylesheet" href="index.css">
     <title>NaughtyDev</title>
 </head>
