--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         para distintas necesidades.
         </p>
     </div>
-    <div class="container">
+    <div class="container-flex">
         <h2 class="title">Nuestros Proyectos</h2>
         <div class="project">
             <img src="https://play-lh.googleusercontent.com/VL1rpR_Xs5tQtCr8UlHvEa_tv9G7319csFOsyhwUS-CdnmAmmt4D2lOKRFAuUv6jnvQm=w240-h480-rw" alt="desarrollo web" srcset="">
