--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>NaughtyDev</title>
 </head>
 <body>
+    <div class="menu">
+        
+    </div>
     <div class="hero">
         <h1 class="hero-title">Desarrolladores web, moviles y software</h1>
         <p class="hero-text">Creado soluciones una linea de codigo a la vez...</p>
