--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="keywords" content="desarrolo de software, guatemala, programadores, programacion, aplicaciones, apps">
     <meta name="description" content="Estudio de desarrollo de software en Guatemala. UX, UI, desarrollo de aplicaciones, programas, sitios web">
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <title>NaughtyDev</title>
 </head>
 <body>
@@ -13,8 +16,14 @@
         
     </div>
     <div class="hero">
+        <div class="hero-container-text">
         <h1 class="hero-title">Desarrolladores web, moviles y software</h1>
         <p class="hero-text">Creado soluciones una linea de codigo a la vez...</p>
+        </div>
+
+        <div>
+            <img src="./assets/desarrollador-guatemala.png" alt="desarrolador guatemala" title="desarrollador guatemala" class="hero-image">
+        </div>
         <div class="hero-menu">
             <ul>
                 <li>
@@ -72,6 +81,16 @@
         </div>
 
     </div>
+        <div class="hero">
+        <div class="hero-container-text">
+        <h2 class="hero-title">Desarrollo web y SEO en Guatemala</h2>
+        <p class="hero-text">Su sitio web diseñado y desarrollado segun sus necesidades optimizado para los motores de busqueda.</p>
+        </div>
+
+        <div>
+            <img src="./assets/seo-guatemala.png" alt="seo guatemala" title="seo guatemala" class="hero-image">
+        </div>
+        </div>
     <footer>
         <p>Derechos reservados</p>
     </footer>
